@@ -1,6 +1,6 @@
 /*
  * sodipodi - an ambitious vector drawing program
- * Copyright (c) Lauris Kaplinski 1999
+ * Copyright (c) Lauris Kaplinski et al 1999-2000
  * Distributable under GPL version 2 (or later)
  *
  */
@@ -25,73 +25,41 @@
 
 #include "session.h"
 
-/* TODO - allow multiple file's to be specifed at startup? */
+enum {SP_ARG_NONE, SP_ARG_FILE, SP_ARG_PRINT, SP_ARG_LAST};
 
-/* Extract command line options which apply before we start up
- * gnome so we can't use gnome_init_with_popt_table for these
- * Would be nice to call the same mechanism as gnome uses to
- * avoid duplicating arg checking code. ??
- */
-void extract_args (int argc, char *argv[],
-		   gboolean *, gboolean *,
-		   gchar **filename,
-		   gchar **to_filename);
-
-/* Command line options
- * -ffile filename to load at startup
- * -pfile print a file without starting GUI
- * -tfile file to print -p file to
- */
-
-/* NOTE, use of extract_args results in these three variables not being used,
- * see again note about wanting to use gnome's command line cracking without
- * having to start GUI to allow for printing without an X environment
- */
-static gchar *arg_filename = NULL;
-static gchar *arg_print_file = NULL;
-static gchar *arg_to_file = NULL;
+static GSList * sp_process_args (poptContext ctx);
+gchar * sp_global_printer = NULL;
 
 struct poptOption options[] = {
   {
-        NULL,
+        "--without-gui",
         'z',
         POPT_ARG_NONE,
         NULL,
         0,
-        N_("Do not initialize GUI. NB! should be FIRST argument"),
+        N_("Do not use GUI. NB! if exist, should be FIRST argument!"),
         NULL
   },
   {
         "file",
         'f',
         POPT_ARG_STRING,
-        &arg_filename,
-        0,
-        N_("Filename to load on startup"),
+        NULL,
+        SP_ARG_FILE,
+        N_("Open specified file (option string may be excluded)"),
         N_("FILENAME")
   },
   {
         "print",
         'p',
         POPT_ARG_STRING,
-        &arg_print_file,
-        0,
-        N_("Print file"),
-        N_("FILENAME")
-  },
-  {
-        "to",
-        't',
-        POPT_ARG_STRING,
-        &arg_to_file,
-        0,
-        N_("Destination filename for print output"),
+        &sp_global_printer,
+        SP_ARG_PRINT,
+        N_("Print files to specified file (use '| program' for pipe)"),
         N_("FILENAME")
   },
   { NULL, '\0', 0, NULL, 0 }
 };
-
-
 
 int
 main (int argc, char *argv[])
@@ -102,10 +70,11 @@ main (int argc, char *argv[])
 	SPDocument * doc;
 	SPMDIChild * child;
 
-	gboolean sp_use_gui = TRUE;
-	gboolean print_file = FALSE;
-	gchar *filename = NULL;
-	gchar *to_filename = NULL;
+	poptContext ctx;
+
+	GSList * fl;
+	gboolean use_gui;
+	gboolean restored;
 
 #ifdef __FreeBSD__
 	fpsetmask(fpgetmask() & ~(FP_X_DZ|FP_X_INV));
@@ -114,37 +83,62 @@ main (int argc, char *argv[])
 	bindtextdomain (PACKAGE, PACKAGE_LOCALE_DIR);
 	textdomain (PACKAGE);
 
-#if 0
-	/* Check command line args before starting up gnome to avoid
-	 * requiring X start-up when using sodipodi to print a file
-	 */
-	extract_args (argc, argv,
-		      &sp_use_gui, &print_file, &filename, &to_filename);
-#endif
+	use_gui = TRUE;
+
+	/* Test, if first arg is "-z" or "--without-gui" */
+
 	if (argc > 1) {
-		if (strcmp (argv[1], "-z") == 0) {
-			sp_use_gui = FALSE;
+		if ((strcmp (argv[1], "-z") == 0) ||
+		    (strcmp (argv[1], "--without-gui") == 0)) {
+
+			use_gui = FALSE;
 		}
 	}
 
-	if (sp_use_gui) {
+	if (!use_gui) {
 
-		poptContext pctx;
+		/* We are started in text mode */
+
+		ctx = poptGetContext (NULL, argc, argv, options, 0);
+		g_return_val_if_fail (ctx != NULL, 1);
+
+		fl = sp_process_args (ctx);
+
+		poptFreeContext (ctx);
+
+		if (fl == NULL) {
+			g_print ("Nothing to do!\n");
+			exit (0);
+		}
+
+		/* Start up gtk, without requiring X */
+
+		gtk_type_init();
+
+		setlocale (LC_NUMERIC, "C");
+
+		while (fl) {
+			doc = sp_document_new_from_file ((gchar *) fl->data);
+			if (doc == NULL) {
+				g_log ("Sodipodi",
+					G_LOG_LEVEL_MESSAGE,
+					"Cannot open file %s",
+					(gchar *) fl->data);
+			} else {
+				if (sp_global_printer != NULL) {
+					sp_do_file_print_to_file (doc, sp_global_printer);
+				}
+			}
+			fl = g_slist_remove (fl, fl->data);
+		}
+	} else {
+
+		/* Use GUI */
 
 		gnome_init_with_popt_table ("sodipodi", VERSION, argc, argv,
-                                    	    options, 0, &pctx);
-#if 0
-		/* fixme: - leftover args */
+                                    	    options, 0, &ctx);
 
-		extract_args (argc, argv,
-			&sp_use_gui, &print_file, &filename, &to_filename);
-#endif
-
-		/* Would normally check args here, but extract_args has
-		 * already done that, and we just needed to use
-		 * gnome_init_with_popt_table to avoid gnome complaining
-		 * about invalid options
-		 */
+		fl = sp_process_args (ctx);
 
 		glade_gnome_init ();
 
@@ -166,71 +160,52 @@ main (int argc, char *argv[])
 
 		sp_mdi_create ();
 
+		restored = FALSE;
 		flags = gnome_client_get_flags (client);
 		if (flags & GNOME_CLIENT_RESTORED) {
 			prefix = gnome_client_get_config_prefix (client);
 			gnome_config_push_prefix (prefix);
-			sp_sm_restore_children ();
+			restored = sp_sm_restore_children ();
 			gnome_config_pop_prefix ();
 		}
 
-		/* fixme: */
+		if (!restored) {
 
-		if (filename == NULL) {
+			/* Nothing was restored, continue with local initializing */
 
-			doc = sp_document_new ();
+			child = NULL;
+			while (fl) {
+				doc = sp_document_new_from_file ((gchar *) fl->data);
+				if (doc == NULL) {
+					g_log ("Sodipodi",
+						G_LOG_LEVEL_MESSAGE,
+						"Cannot open file %s",
+						(gchar *) fl->data);
+				}  else {
+					child = sp_mdi_child_new (doc);
+					g_return_val_if_fail (child != NULL, 1);
+					gnome_mdi_add_child (SODIPODI, GNOME_MDI_CHILD (child));
+					gnome_mdi_add_view (SODIPODI, GNOME_MDI_CHILD (child));
+				}
+				fl = g_slist_remove (fl, fl->data);
+			}
 
-		} else {
+			if (child == NULL) {
+				/* No files were loaded */
+				doc = sp_document_new ();
+				g_return_val_if_fail (doc != NULL, 1);
+				child = sp_mdi_child_new (doc);
+				g_return_val_if_fail (child != NULL, 1);
+				gnome_mdi_add_child (SODIPODI, GNOME_MDI_CHILD (child));
+				gnome_mdi_add_view (SODIPODI, GNOME_MDI_CHILD (child));
+			}
 
-			doc = sp_document_new_from_file (filename);
-			if (doc == NULL) {
-                                g_print("%s : File not found\n", filename);
-                                doc = sp_document_new ();
-                        }
 		}
 
-		g_assert (doc != NULL);
-
-		child = sp_mdi_child_new (doc);
-
-		gnome_mdi_add_child (SODIPODI, GNOME_MDI_CHILD (child));
-		gnome_mdi_add_view (SODIPODI, GNOME_MDI_CHILD (child));
-
-		/* fixme: Is this right? */
-
-		poptFreeContext (pctx);
+		poptFreeContext (ctx);
 
 		gtk_main ();
 
-	} else {
-
-		/* fixme: */
-
-		extract_args (argc, argv,
-			&sp_use_gui, &print_file, &filename, &to_filename);
-
-		/* printing a file */
-
-		/* Start up gtk, without requiring X */
-
-		gtk_type_init();
-
-		setlocale (LC_NUMERIC, "C");
-
-                doc = sp_document_new_from_file (filename);
-                g_assert (doc != NULL);
-
-                if (to_filename == NULL) {
-			/* sp_do_file_print (doc); */
-			g_print("SORRY, can't send directly to printer\n");
-			g_print("Add -t file.ps to dump to postscript\n");
-			/* How do you get a GnomePrinter without getting a
-			 * dialog box...which we can't get bacause we haven't
-			 * started the GUI ???
-			 */
-                } else {
-                        sp_do_file_print_to_file (doc, to_filename);
-                }
 	}
 
 #ifdef __FreeBSD__
@@ -240,74 +215,35 @@ main (int argc, char *argv[])
 	return 0;
 }
 
-/* Look for -f load_filename, -p print_filename, and -t print_to_file 
- * args
- */
+static GSList *
+sp_process_args (poptContext ctx)
+{
+	GSList * fl;
+	const gchar * fn;
+	const gchar ** args;
+	gint i, a;
 
-void
-extract_args (int argc, char *argv[],
-	      gboolean *use_gui, gboolean *print_file,
-	      gchar **filename, gchar **to_filename)
-{ 
-	int ch;
-	int count = 0;
+	fl = NULL;
 
-  	*use_gui = TRUE;
-  	*print_file = FALSE;
-  	*filename = NULL;
-  	*to_filename = NULL;
-
-	while ((ch = getopt(argc,argv,"p:f:t:z")) != EOF)  {
-
-		count++;
-
-		switch (ch) {
-
-		case (int) 'p' :
-                        if (optarg == NULL) {
-                                fprintf (stderr,
-                                         "Filename required with -p\n");
-                        } else {
-                                *filename = g_strdup (optarg);
-				*print_file = TRUE;
-                        }
-
-		break;
-
-		case (int) 'f' :
-			if (optarg == NULL) {
-				fprintf (stderr, 
-					 "Filename required with -f\n");
-			} else {
-				*filename = g_strdup (optarg);
+	while ((a = poptGetNextOpt (ctx)) >= 0) {
+		switch (a) {
+		case SP_ARG_FILE:
+			fn = poptGetOptArg (ctx);
+			if (fn != NULL) {
+				fl = g_slist_append (fl, (gpointer) fn);
 			}
-		break;
-
-		case (int) 't' :
-			if (optarg == NULL) {
-				fprintf (stderr, 
-					 "Filename required with -t\n");
-			} else {
-				*to_filename = g_strdup (optarg);
-			}
-		break;
-
+			break;
 		default:
-		break;
+			break;
 		}
 	}
 
-	/* TODO: Should really check for -f file and -p file conflict */
+	args = poptGetArgs (ctx);
 
-	/* No GUI required when printing */
-	if (*print_file == TRUE) {
-		*use_gui = FALSE;
+	for (i = 0; args[i] != NULL; i++) {
+		fl = g_slist_append (fl, (gpointer) args[i]);
 	}
 
-	/* If no args found, but one was specified, take the first as
-	 * a filename. eg ./sodipodi file.svg
-	 */
-	if (count == 0 && argc > 1) {
-		*filename = g_strdup (argv[1]);
-	}
+	return fl;
 }
+
