@@ -1,3 +1,9 @@
+2000-03-29  Lauris Kaplinski <lauris@ariman.ee>
+
+    * Modified argument parsing, --without-gui, if present, has to be first
+    * argument, but otherwise now all GNOME/Gtk args work
+    * You can also specify multiple files for displaying or printing
+
 2000-03-28  Lauris Kaplinski <lauris@ariman.ee>
 
     * Added cute little squirrel to /gnome/apps/Graphics ;-)
